// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`any combinations > any 1 1`] = `"<i class="data-[xxx=foo]:(p-1 m-1) data-[xxx=bar]:(p-1 m-1) data-[yyy=aa]:p-1" />"`;

exports[`any combinations > any 2 1`] = `"<i class="[&[type=number],&[type=text]]:c-red data-[xxx=foo]:p-1" data-[xxx=bar]:p-1" />"`;

exports[`any combinations > any 2 2`] = `"<i class="data-[xxx=foo]:(border flex) data-[xxx=bar]:(border flex) [&[type=number],&[type=text]]:c-red" />"`;

exports[`references some special cases from UnoCSS > basic 1`] = `"<i class="<sm:hover:[&[type=number],&[type=text]]:(p-1 p-2)" />"`;

exports[`references some special cases from UnoCSS > basic 2`] = `"<i class="<sm:hover:data-[xxx=foo]:(p-1 p-2) <sm:hover:data-[xxx=bar]:(p-1 p-2)" />"`;

exports[`references some special cases from UnoCSS > basic 3`] = `"<i class="[&[type=number],&[type=text]]:(w-40vw pr-4.5rem)" />"`;

exports[`references some special cases from UnoCSS > basic 4`] = `"<i class="data-[xxx=foo]:(w-40vw pr-4.5rem) data-[xxx=bar]:(w-40vw pr-4.5rem)" />"`;

exports[`references some special cases from UnoCSS > basic 5`] = `"<i class="[&[type=number],&[type=text]]:(grid grid-cols-[1fr,50%])" />"`;

exports[`references some special cases from UnoCSS > basic 6`] = `"<i class="data-[xxx=foo]:(grid grid-cols-[1fr,50%]) data-[xxx=bar]:(grid grid-cols-[1fr,50%])" />"`;

exports[`references some special cases from UnoCSS > basic 7`] = `"<i class="![&[type=number],&[type=text]]:(m-2 p-2)" />"`;

exports[`references some special cases from UnoCSS > basic 8`] = `"<i class="!data-[xxx=foo]:(m-2 p-2) !data-[xxx=bar]:(m-2 p-2)" />"`;

exports[`references some special cases from UnoCSS > basic 9`] = `"<i class="[&[type=number],&[type=text]]:(!m-2 p-2)" />"`;

exports[`references some special cases from UnoCSS > basic 10`] = `"<i class="data-[xxx=foo]:(!m-2 p-2) data-[xxx=bar]:(!m-2 p-2)" />"`;

exports[`references some special cases from UnoCSS > basic 11`] = `"<i class="[&[type=number],&[type=text]]:(w-1/2 h-[calc(100%-4rem)])" />"`;

exports[`references some special cases from UnoCSS > basic 12`] = `"<i class="data-[xxx=foo]:(w-1/2 h-[calc(100%-4rem)]) data-[xxx=bar]:(w-1/2 h-[calc(100%-4rem)])" />"`;

exports[`references some special cases from UnoCSS > basic 13`] = `
"<i class="[&[type=number],&[type=text]]:(
!m-2 
p-2
)" />"
`;

exports[`references some special cases from UnoCSS > basic 14`] = `
"<i class="data-[xxx=foo]:(
!m-2 
p-2
) data-[xxx=bar]:(
!m-2 
p-2
)" />"
`;
